<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:title="@string/home" android:icon="@drawable/ic_home" android:checked="true" />
        <item android:id="@+id/nav_calendar" android:title="@string/calendar" android:icon="@drawable/ic_calendar"/>
        <item android:id="@+id/nav_statistics" android:title="@string/statistics" android:icon="@drawable/ic_statistics"/>
        <item android:id="@+id/nav_trash" android:title="@string/trash" android:icon="@drawable/ic_trash" />
        <item android:id="@+id/nav_settings" android:title="@string/settings" android:icon="@drawable/ic_settings"/>
        <item android:id="@+id/nav_tutorial" android:title="@string/tutorial" android:icon="@drawable/ic_info"/>
        <item android:id="@+id/nav_credits" android:title="@string/credits" android:icon="@drawable/credits"/>
        <item android:id="@+id/theme_mode" android:title="@string/dark_mode"  app:actionViewClass="android.widget.Switch" android:checkable="true" android:icon="@drawable/ic_theme"/>
    </group>

</menu>