<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    android:id="@+id/layout_credits_scroll_view"
    android:background="@color/white"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/layout_credits_relative_layout"
        android:padding="20dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/layout_credits_tv_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/credits"
            android:textColor="@color/green"
            android:textSize="26sp" />


        <TextView
            android:id="@+id/layout_credits_tv_programmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/programmer"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_credits"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/layout_credits_tv_glen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/glen"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_programmer"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>


        <TextView
            android:id="@+id/layout_credits_tv_icons_designer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/icons_designer"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_glen"

            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/layout_credits_tv_adona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/adona"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_icons_designer"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/layout_credits_tv_researchers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/researcher"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_adona"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/layout_credits_tv_valdez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/valdez"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_researchers"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/layout_credits_tv_mayor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/mayor"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_valdez"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>


        <TextView
            android:id="@+id/layout_credits_tv_github_dependencies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="@string/github_dependencies"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_mayor"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/layout_credits_tv_android_times_square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_medium"
            android:text="Android-Times-Square"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_github_dependencies"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>


        <TextView
            android:id="@+id/layout_credits_tv_mp_android_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_medium"
            android:text="PhilJay:MPAndroidChart"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_android_times_square"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/layout_credits_tv_mreram_showcaseview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_medium"
            android:text="Mreram:Showcaseview"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_mp_android_chart"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>


        <TextView
            android:id="@+id/layout_credits_tv_teachers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="Also thanks to our teachers ^~^"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:layout_below="@id/layout_credits_tv_mreram_showcaseview"/>

        <TextView
            android:id="@+id/layout_credits_tv_ps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="PS:"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:layout_below="@id/layout_credits_tv_teachers"
            android:layout_toStartOf="@id/layout_credits_tv_teachers"/>

        <TextView
            android:id="@+id/layout_credits_tv_ps_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="This is only a project, and we hope our app could help you in some way. If you have any suggestions to improve the app or maybe you've found some bugs, please contact us through our facebook accounts. Thanks ^~^"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/layout_credits_tv_teachers"
            android:layout_alignEnd="@id/layout_credits_tv_teachers"
            android:layout_toEndOf="@id/layout_credits_tv_ps" />


        <TextView
            android:id="@+id/layout_credits_tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="Version"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/layout_credits_tv_ps_message"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/layout_credits_tv_ps_version_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sarpanch_medium"
            android:text="1.0"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/layout_credits_tv_version"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />



    </RelativeLayout>
</ScrollView>
